--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,6 +9,7 @@ header_bg.png: header_bg.png
 home_title.png: home_title.png
 logo.png: logo.png
 mobile.png: mobile.png
+passbook.png: passbook.png
 rails.png: rails.png
 retail.png: retail.png
 signup.png: signup.png
