--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -12,6 +12,7 @@ mobile.png: mobile.png
 passbook.png: passbook.png
 rails.png: rails.png
 retail.png: retail.png
+retail_img.png: retail_img.png
 signup.png: signup.png
 singupformtitle.png: singupformtitle.png
 submit.png: submit.png
