update deals centered image

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -3,6 +3,7 @@ content_middle_bg.png: content_middle_bg.png
 custom_deals.png: custom_deals.png
 deals.png: deals.png
 deals_01.png: deals_01.png
+deals_01.psd: deals_01.psd
 deals_02.png: deals_02.png
 deals_iphone.png: deals_iphone.png
 deals_screenshot.png: deals_screenshot.png
